# PaintingAutoEncoder

./: README.md  pyproject.toml  requirements.txt
dataset/: __init__.py
notebooks/: data_demo.ipynb
pm/dataset/: __init__.py  dataloader.py
