[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "PaintingAutoEncoder"
version = "0.1.0"
description = "Unsupervised autoencoder for painting style analysis"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "pillow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pm*"]

[tool.setuptools.package-data]
example_data = ["pm.tests.example_dataset"]